Fix HTML Overflow

--- a/assets/styles.less
+++ b/assets/styles.less
@@ -41,6 +41,7 @@
 html,
 body {
   height: 100%;
+  max-width: 100vw;
 }
 
 html {
